<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="locale">zhUS</string>
    <string name="app_name">RMS</string>
    <!--Facebook-->
    <string name="facebook_app_id">129140231016831</string>
    <string name="fb_login_protocol_scheme">fb129140231016831</string>
    <!--Common-->
    <string name="loading">Loading</string>
    <string name="waiting">Please wait...</string>
    <string name="logout">Logout</string>
    <string name="leave">Leave</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirme">Confirme</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>
    <string name="createReceivingOrder">Create Receiving Order</string>
    <string name="createQusetion">Create?</string>
    <string name="insert_successful">Insert Successful</string>
    <string name="insert_fail">Insert Fail</string>
    <string name="choose">Choose</string>
    <string name="close">Close</string>
    <string name="choice">Choice</string>
    <string name="setting">Setting</string>
    <!--Error-->
    <string name="missingField">Missing</string>
    <!--searchview-->
    <string name="search_hint">Search...</string>
    <!--ErrorMessage-->
    <string name="loginValueIsNull">Please Input Username and Password</string>
    <string name="productAction">Please Input ProductCode and ProductName</string>
    <!--navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!--navigation Bar Item-->
    <string name="allreceivingorder">All Receiving Order</string>
    <string name="allproduct">All Product</string>
    <string name="receiving">Receiving</string>
    <string name="inventory">Inventory</string>
    <string name="stockout">StockOut</string>
    <string name="record">Record</string>
    <string name="other">Other</string>
    <!--Login-->
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="loginSuccessful">LoginSuccessful</string>
    <string name="loginFail">LoginFail</string>
    <!--Product-->
    <string name="productId">ProductId:</string>
    <string name="productCode">ProductCode:</string>
    <string name="productName">ProductName:</string>
    <string name="partyId">PartyId:</string>
    <string name="status">Status:</string>
    <string name="createDate">Create Date:</string>
    <string name="closeDate">Close Date:</string>
    <string name="remark">Remark:</string>
    <string name="productDescriptionEN">Description(EN):</string>
    <string name="productDescriptionCH">Description(CH):</string>

    <!--ProductAction-->
    <string name="addProduct">Add Product</string>
    <string name="action_productId">ProductId</string>
    <string name="action_productCode">Product Code</string>
    <string name="action_productName">Product Name</string>
    <string name="action_partyId">PartyId</string>
    <string name="action_status">Status</string>
    <string name="action_createDate">Create Date</string>
    <string name="action_closeDate">Close Date</string>
    <string name="action_remark">Remark</string>
    <string name="action_productDescriptionEN">Description (EN)</string>
    <string name="action_productDescriptionCH">Description (CH)</string>

    <!--ProductIncrease-->
    <string name="increase_addProduct">Add Product</string>
    <string name="increase_productId">ProductId</string>
    <string name="increase_productCode">Product Code</string>
    <string name="increase_productName">Product Name</string>
    <string name="increase_partyId">PartyId</string>
    <string name="increase_status">Status</string>
    <string name="increase_createDate">Create Date</string>
    <string name="increase_closeDate">Close Date</string>
    <string name="increase_remark">Remark</string>
    <string name="increase_productDescriptionEN">Description (EN)</string>
    <string name="increase_productDescriptionCH">Description (CH)</string>

    <!--InsertProduct-->
    <string name="insertSuccessful">InsertSuccessful</string>
    <string name="insertFail">InsertFail</string>
    <string name="queryfail">Queryfail</string>

    <!--ReceivingOrder-->
    <string name="receivingOrder_orderId">OrderId:</string>
    <string name="receivingOrder_date">ReceivingDate:</string>
    <string name="receivingOrder_remark">Remark:</string>
    <string name="receivingOrder_status">Status:</string>
    <string name="receivingOrder_createDate">CreateDate:</string>
    <string name="receivingOrder_closeDate">CloseDate:</string>
    <string name="receivingOrder_actualQty">ActualQty</string>
    <string name="receivingOrder_estimateQty">EstimateQty:</string>
    <string name="receivingOrder_itemQty">Goods Qty:</string>

    <!--ReceivingItem-->
    <string name="receivingItem_receivingID">ReceivingID:</string>
    <string name="receivingItem_productId">ProductId:</string>
    <string name="receivingItem_itemStatus">Status:</string>
    <string name="receivingItem_itemCreateDate">CreateDate:</string>
    <string name="receivingItem_itemReceivingDate">ReceivingDate:</string>
    <string name="receivingItem_itemWeight">Weight:</string>
    <string name="receivingItem_itemWeight_Unit">Weight/Unit:</string>
    <string name="receivingItem_itemWeightUnit">Unit:</string>
    <string name="receivingItem_itemQuantity_Unit">Quantity/Unit:</string>
    <string name="receivingItem_itemRemark">Remark:</string>
    <string name="receivingItem_partyId">PartyId:</string>
    <string name="receivingItem_orderId">OrderId:</string>
    <string name="receivingItem_ProductCode">ProductCode:</string>
    <string name="receivingItem_ProductName">ProductName:</string>
    <!--ReceivingIcerease-->
    <string name="receiving_increase_title">Create ReceivingOrder</string>
    <!--DeliveryIncreaseAct-->
    <string name="delivery_increase_title">Create DeliveryOrder</string>
    <!--Delivery Order-->
    <string name="deliveryOrder_deliveryId">DeliveryID:</string>
    <string name="deliveryOrder_date">StockOutDate</string>
    <string name="deliveryOrder_remark">Remark:</string>
    <string name="deliveryOrder_status">Status:</string>
    <string name="deliveryOrder_createDate">CreateDate:</string>
    <string name="deliveryOrder_closeDate">CloseDate:</string>
    <string name="deliveryOrder_actualQty">ActualQty</string>
    <string name="deliveryOrder_estimateQty">EstimateQty:</string>
    <string name="deliveryOrder_itemQty">Goods Qty:</string>

    <!--Delivery Item-->
    <string name="deliveryItem_ProductCode">ProductCode:</string>
    <string name="deliveryItem_ProductName">ProductName:</string>
    <string name="deliveryItem_itemStockOutDate">StockOutDate:</string>
    <string name="deliveryItem_itemWeight_Unit">Weight/Unit:</string>
    <string name="deliveryItem_itemQuantity_Unit">Quantity/Unit:</string>
    <string name="deliveryItem_itemStatus">Status:</string>
    <string name="deliveryItem_itemCreateDate">CreateDate:</string>
    <string name="deliveryItem_itemcloseDate">CloseDate:</string>
    <string name="deliveryItem_itemRemark">Remark:</string>

    <!--Action-->
    <string name="add_product">Add Product</string>
    <string name="add_receiving_order">Add Receiving Order</string>
    <string name="add_stock_out_order">Add Stockout Order</string>
    <string name="add_unit">Add Unit</string>
    <!--wifi-->
    <string name="label_bad_network_connection">Bad Network Connection!</string>

    <!--label-->
    <string name="label_weight">GW:</string>
    <string name="label_quantity">Qty:</string>
    <string name="label_receivingDate">Receiving Date</string>
    <string name="label_stockoutDate">StockOut Date</string>
    <string name="label_status">Status:</string>
    <string name="label_input">Please Input</string>
    <string name="label_number">Number</string>
    <string name="label_storage">Storage Status</string>
    <string name="label_add">Add</string>
    <string name="label_delete">Delete</string>
    <string name="label_edit">Edit</string>
    <string name="label_save">Save</string>
    <string name="label_detail">Detail</string>
    <string name="label_weight_unit">Weight Unit</string>
    <string name="label_quantity_unit">Quantity Unit</string>
    <string name="label_max">Max:</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_remenber">Remember</string>
    <string name="label_language">Language</string>
    <string name="label_version">Version</string>
    <string name="label_margin">Margin:</string>
    <string name="label_empty_value">Empty Value</string>
    <string name="label_receiving_order">Receiving Order</string>
    <string name="label_stockout_order">StockOut Order</string>
    <string name="label_full_weight">Weight</string>
    <string name="label_full_qty">Quantity</string>
    <string name="label_date_range">Search Date Range</string>
    <string name="label_date_duration">Search Date Duration</string>
    <string name="label_days">Days</string>
    <string name="label_fill_server_address">Fill Server Address</string>


    <!--Context-->
    <!--<string name=""-->
    <!--title-->
    <string name="title_input_qty">Quantity</string>
    <string name="title_input_weight">Weight</string>
    <string name="title_weight_unit">Your Weight Unit</string>
    <string name="title_qty_unit">Your Quantity Unit</string>
    <string name="add_weight_unit">Add Weight Unit</string>
    <string name="add_quantity_unit">Add Quantity Unit</string>
    <string name="title_select_weight_unit">Select Weight Unit</string>
    <string name="title_select_quantity_unit">Select Quantity Unit</string>
    <string name="title_edit_receiving">Edit Receiving</string>
    <string name="title_edit_delivery">Edit Delivery</string>
    <string name="title_choice_language">Choice Language</string>

    <!--Language-->
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="label_welcome">Welcome</string>

</resources>
