<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_receiving"
            android:icon="@drawable/input"
            android:title="@string/receiving"
            android:checked="true"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_stockOut"
            android:icon="@drawable/output"
            android:title="@string/stockout"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/inventory"
            android:title="@string/inventory"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_all_product"
            android:icon="@drawable/mailbox_black"
            android:title="@string/allproduct"
            android:checkable="true"
            />
    </group>

    <item android:title="Communicate">

    <group >
        <menu>
            <!--<item-->
                <!--android:id="@+id/nav_record"-->
                <!--android:icon="@drawable/record"-->
                <!--android:title="@string/record"-->
                <!--android:checkable="true"/>-->
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting"
                android:title="@string/setting"
                android:checkable="false" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_black"
                android:title="@string/logout"
                android:checkable="true"/>

        </menu>
    </group>
    </item>
</menu>
