<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_pool"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayE8E8E8"
    android:minWidth="1000dp"
    android:minHeight="450dp"
    android:orientation="vertical"
    tools:context="com.example.james.rms.operation.receiving_action.ReceivingIncreaseAct">

    <LinearLayout
        android:background="@color/blue0895ef"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="@color/black1F1F1F"
            android:gravity="center"
            android:text="@string/allproduct"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/card_margin"
        android:paddingLeft="@dimen/card_margin"
        android:paddingRight="@dimen/card_margin"
        android:paddingTop="@dimen/card_margin"
        android:layout_weight="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray3C3D40"
            android:dividerHeight="2dp"
            android:id="@+id/receiving_increase_dialog_listview"></ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="60dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue0895ef"
            android:id="@+id/receiving_increase_dialog_cancel"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue0895ef"
            android:id="@+id/receiving_increase_dialog_submit"
            android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>