<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/card_margin"
            android:paddingLeft="@dimen/card_margin"
            android:paddingRight="@dimen/card_margin"
            android:paddingTop="@dimen/card_margin"
            android:orientation="vertical">

            <!-- Items Status-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/receivingItem_itemStatus"/>
                <TextView
                    android:id="@+id/receivingItem_itemStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <!-- Create Date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/receivingItem_itemCreateDate"/>
                <TextView
                    android:id="@+id/receivingItem_itemCreateDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

            <!--Item Remark-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/receivingItem_itemRemark"/>
                <TextView
                    android:id="@+id/receivingItem_itemRemark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

</LinearLayout>